fix jumping btn

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,10 @@ body {
   border: none;
   cursor: pointer;
   border-radius: 10px;
+  width: 70px;
+  height: 50px;
+  line-height: 1;
+  display: inline-block;
 }
 
 .progress-bar-container {
